examples/errors/module_name_clobber_error.flx
  fn Ember() {
    return 1;
  }
